fix: jdk 11 compatibility